--- a/Web Development/facebook.html
+++ b/Web Development/facebook.html
@@ -14,49 +14,53 @@
             }
             .upperpage {
                 background-color: #f0f2f5;
-                width: auto;
+                width: 100%;
             }
             .innerpage {
-                padding-bottom: 164px;
-                padding-top: 20px;
+                padding-bottom: 112px;
+                padding-top: 72px;
             }
             .flexpage {
-                display: flex;
-                flex-direction: column;
-                text-align: center;
+                position: relative;
                 height: 496px;
-                margin: 0 40px;
+                margin: 0 auto;
                 width: auto;
+                max-width: 980px;
                 padding: 20px 0px;
             }
             #imgBox {
-                height: 54px;
-                padding-bottom: 20px;
+                padding: 112px 0 16px;
             }
             #imgBox img {
                 margin: -28px;
             }
             #descBox {
-                margin: 0 auto;
-                padding: 0;
-                width: 400px;
                 display: inline-block;
+                box-sizing: border-box;
+                text-align: left;
+                width: 400px;
+                height: 286px;
+                margin: 0;
+                padding-right: 32px;
                 vertical-align: top;
             }
             #desc {
                 display: inline-block;
                 font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-                font-size: 24px;
+                font-size: 28px;
                 font-weight: 400;
                 color: #1C1E21;
                 line-height: 28px;
                 width: auto;
                 margin: 0;
+                padding: 0 0 20px;
+                letter-spacing: normal;
+                text-rendering: optimizelegibility;
             }
             .bothform {
-                float: none;
-                margin: 0 auto;
+                margin: 0;
                 display: inline-block;
+                float: right;
                 vertical-align: top;
                 height: 456px;
                 width: 396px;
